fix: complete and fix lib/jsx-parser.ts syntax errors
Co-authored-by: Abdulaziz Al-Hamdani <207053011+openaziz@users.noreply.github.com>